# IGVC

./: .gitignore  .gitmodules  README.md  igvc_doxy_config  test.txt
rosTutorial/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
rosTutorial/catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  rosTutorial.pc  rostutorial.pc
rosTutorial/catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
rosTutorial/catkin_ws/devel/share/rosTutorial/cmake/: rosTutorialConfig.cmake
rosTutorial/catkin_ws/devel/share/rostutorial/cmake/: rostutorialConfig.cmake
rosTutorial/catkin_ws/src/beginner_tutorials/: package.xml
ros_ws/src/arduino/actuator/: actuator.ino
ros_ws/src/arduino/bms_control/: BMS_control.ino
ros_ws/src/arduino/conveyer/: conveyer.ino
ros_ws/src/arduino/light/: light.ino
ros_ws/src/arduino/motor/: motor.ino
ros_ws/src/arudino/imu/: imu.ino  imu_retrieval.ino
ros_ws/src/arudino/motor/: motor.ino
ros_ws/src/common/: config.cpp  config.h  constants.h
ros_ws/src/control/: CMakeLists.txt  package.xml
ros_ws/src/control/include/control/: motor_controller.h  remote_control.h  twist_mux.h
ros_ws/src/control/launch/: camera.launch  gps.launch  igvc.launch  lidar.launch  robot.launch  slam.launch
ros_ws/src/control/msg/: Encoder.msg
ros_ws/src/control/param/: igvc.yaml
ros_ws/src/control/param/controllers/: 360.yaml  moga.yaml  mystery_controller.yaml  ps3_controller.yaml  wiimote_controller  wiimote_nunchuck_controller
ros_ws/src/control/src/: remote_control.cpp  remote_control_node.cpp
ros_ws/src/control/src/control/: motor_controller.cpp  motor_controller_node.cpp  remote_control.cpp  remote_control_node.cpp  twist_mux.cpp  twist_mux_node.cpp
ros_ws/src/localization/: CMakeLists.txt  package.xml
ros_ws/src/localization/include/localization/: orientation.h
ros_ws/src/localization/src/localization/: orientation.cpp  orientation_node.cpp
ros_ws/src/navigation/: CMakeLists.txt  package.xml
ros_ws/src/navigation/include/navigation/: astar.h  astar.hpp  euclidiandistancehueristic.h  minheap.h  minheap.hpp  navigation.h  typewkey.h  updatepriorityqueue.h  updatepriorityqueue.hpp
ros_ws/src/navigation/src/: PathFinderTutorials.cpp  euclidiandistancehueristic.cpp  minheap.cpp  navigation.cpp  navigation_node.cpp
ros_ws/src/navigation/src/navigation/: navigation.cpp
ros_ws/src/robot_description/: CMakeLists.txt  package.xml
ros_ws/src/robot_description/launch/: display.launch  gazebo.launch
ros_ws/src/robot_description/meshes/: back_wheel_link.STL  base_link.STL  laser_link.STL  left_wheel_link.STL  right_wheel_link.STL
ros_ws/src/robot_description/robots/: igvc.urdf  igvc.urdf.xacro
ros_ws/src/robot_description/urdf/: igvc_gazebo.urdf.xacro
ros_ws/src/robot_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/robot_gazebo/launch/: igvc_basic_simulation.launch
ros_ws/src/robot_gazebo/models/: install_models.sh
ros_ws/src/robot_gazebo/models/igvc_basic_ground/: model.config  model.sdf
ros_ws/src/robot_gazebo/models/igvc_basic_ground/materials/scripts/: igvc_basic_ground.material
ros_ws/src/robot_gazebo/worlds/: igvc_basic.world
ros_ws/src/vision/: CMakeLists.txt  package.xml
ros_ws/src/vision/include/vision/: vision.h
ros_ws/src/vision/src/: vision.cpp  vision_node.cpp
ros_ws/src/vision/src/vision/: vision.cpp  vision_node.cpp
tutorial/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
tutorial/catkin_ws/devel/lib/beginner_tutorials/: listener  talker
tutorial/catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc
tutorial/catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
tutorial/catkin_ws/devel/share/roseus/ros/beginner_tutorials/: manifest.l
tutorial/catkin_ws/src/beginner_tutorials/: CMakeLists.txt
tutorial/catkin_ws/src/beginner_tutorials/src/: listener.cpp  talker.cpp
