<?xml version="1.0"?>
<package>
  <name>control</name>
  <version>0.0.0</version>
  <description>The control package</description>

  <maintainer email="mia2n4@mst.edu">Matt Anderson</maintainer>

  <license>BSD</license>
  
  <url type="website">http://robotics.mst.edu</url>
  <url type="repository">https://github.com/MST-Robotics/IGVC</url>

  <author email="mia2n4@mst.edu">Matt Anderson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
